# aftermath

./: .gitignore  .kdbgrc.ostv  AUTHORS  ChangeLog  INSTALL  Makefile.am  README  bootstrap  build-all.sh  config.h.in  configure.ac
aftermath-convert/: .gitignore  Makefile.am  README  configure.ac
aftermath-convert/m4/: with-check.m4
aftermath-convert/src/ost/: ost.c
aftermath-dump/: Makefile.am  README  configure.ac
language-bindings/python/libaftermath-core/: .gitignore  Makefile.am  README  configure.ac
language-bindings/python/libaftermath-core/m4/: python.m4
language-bindings/python/libaftermath-core/scripts/: template.py
libaftermath-core/: Makefile.am  bootstrap.sh  configure.ac  libaftermath-core.pc.in
libaftermath-core/headers/: Makefile.am
libaftermath-core/headers/aftermath/core/: arithmetic.h  array_collection.h  array_registry.h  aux.h  bits.h  bitvector.h  buffer.h  circular_buffer.h  convert.h  counter_description_array.h  counter_event_array.h  counter_event_array_collection.h  default_trace_array_registry.h  dfg_builtin_node_impl.h  dfg_graph.h  dfg_node_type_registry.h  dfg_schedule.h  dfg_type.h  dfs.h  event_collection.h  event_collection_array.h  interval_array.h  io_context.h  io_error.h  io_hierarchy_context.h  measurement_interval_array.h  object_notation.h  ompt_cancel_array.h  ompt_dependences_array.h  ompt_flush_array.h  ompt_implicit_task_array.h  ompt_lock_destroy_array.h  ompt_lock_init_array.h  ompt_loop_array.h  ompt_loop_chunk_array.h  ompt_master_array.h  ompt_mutex_acquire_array.h  ompt_mutex_acquired_array.h  ompt_mutex_released_array.h  ompt_nest_lock_array.h  (+33 more)
libaftermath-core/m4/: int128.m4
libaftermath-core/scripts/: template.py
libaftermath-core/src/: .gitignore  ansi_extras.c  ansi_extras.h  arithmetic.h  array_registry.h  bsearch.h  buffer.h  circular_buffer.h  convert.h  counter_description_array.h  default_trace_array_registry.c  default_trace_array_registry.h  dfg_buffer.c  dfg_builtin_node_impl.h  dfg_builtin_node_types.c  dfg_builtin_type_impl.h  dfg_builtin_types.c  dfg_graph.c  dfg_node.h  dfg_node_type_registry.h  dfg_schedule.c  dfg_type.c  dfg_type_registry.c  event_collection.h  event_collection_array.h  event_collection_array_mapping.h  event_mapping.c  event_mapping.h  frame_type_registry.priv.h  hierarchy.c  hierarchy.h  index_to_id_map.h  interval.h  interval_array.h  io_context.c  io_context.h  io_error.c  measurement_interval_array.h  object_notation.c  object_notation.h  (+47 more)
libaftermath-core/src/contrib/linux-kernel/: list.h  rbtree.c  rbtree_augmented.h  types.h  userspace.h
libaftermath-core/src/dfg/nodes/: basic_statistics.h  bool_constant.h  conditional_forward.h  conditional_forward_all.c  conditional_forward_all.h  conditional_forward_elementwise.c  conditional_forward_pairwise.c  conditional_forward_pairwise.h  double_to_string.h  duration_to_string.h  duration_to_uint64.c  event_mapping_common.h  hierarchy_attributes.h  hierarchy_node_attributes.c  hierarchy_node_selector.h  hierarchy_selector.c  histogram_attributes.c  int_constant.h  int_to_string.c  interval_attributes.c  interval_attributes.h  interval_duration.c  interval_duration.h  logic.c  logic.h  math.c  math.h  merge.c  pair_timestamp_hierarchy_node_attributes.c  select_nth.c  state_event_attributes.c  state_event_attributes.h  string_concat.c  (+10 more)
libaftermath-core/src/indexes/: kdtree.c  recttree.h
libaftermath-core/src/statistics/: discrete.c  discrete.h  histogram.c  interval.h
libaftermath-render/: Makefile.am  configure.ac  libaftermath-render.pc.in
libaftermath-render/headers/: Makefile.am
libaftermath-render/src/: tree_layout.c
libaftermath-render/src/dfg/: dfg_coordinate_mapping.c  dfg_coordinate_mapping.h  renderer.c  renderer.h  timeline_layer_common.h
libaftermath-render/src/histogram/: renderer.c
libaftermath-render/src/kdtree/: renderer.c
libaftermath-render/src/recttree/: renderer.c
libaftermath-render/src/telamon/: candidate_tree_renderer.h
libaftermath-render/src/timeline/: common_layers.c  renderer.c  renderer.h
refactor/aftermath/: .gitignore  Makefile.am  README  bootstrap.sh  configure.ac
refactor/aftermath/src/: AftermathController.cpp  AftermathController.h  AftermathSession.cpp  AftermathSession.h  CairoWidget.cpp  CairoWidget.h  Exception.cpp  Exception.h  TimelineWidget.cpp  TimelineWidget.h  cxx_extras.h  cxx_interoperability.h  main.cpp
refactor/libaftermath-core/: .gitignore  Makefile.am  README  configure.ac
refactor/libaftermath-core/doc/: .gitignore  Doxyfile.in  TYPE_SYSTEM  type_definitions
refactor/libaftermath-core/headers/: Makefile.am
refactor/libaftermath-core/m4/: custom-program.m4
refactor/libaftermath-core/scripts/: template.py
refactor/libaftermath-core/src/: .gitignore  ansi_extras.c  ansi_extras.h  arithmetic.h  array_collection.c  array_collection.h  array_registry.c  aux.h  bits.h  bitvector.c  bitvector.h  bsearch.h  buffer.c  circular_buffer_size.h  convert.h  counter_description_array.h  counter_event_array.h  counter_event_array_collection.h  default_array_registry.h  default_event_array_registry.c  default_event_array_registry.h  default_event_collection_io_array_registry.c  default_event_collection_io_array_registry.h  default_trace_array_registry.c  dfg_buffer.c  dfg_buffer.h  dfg_builtin_node_impl.h  dfg_builtin_node_types.c  dfg_builtin_node_types.h  dfg_builtin_type_impl.h  dfg_builtin_types.c  dfg_builtin_types.h  dfg_graph.c  dfg_graph.h  dfg_node.c  dfg_node.h  dfg_node_type_registry.c  dfg_node_type_registry.h  dfg_schedule.c  dfg_schedule.h  (+54 more)
refactor/libaftermath-render/: Makefile.am  README  configure.ac
refactor/libaftermath-render/headers/: Makefile.am
refactor/libaftermath-render/src/: cairo_extras.c  cairo_extras.h  color_map.h  tree_layout.h
refactor/libaftermath-trace/: .gitignore  AUTHORS  Makefile.am  README  configure.ac
refactor/libaftermath-trace/headers/: Makefile.am
refactor/libaftermath-trace/src/: buffered_event_collection.h  buffered_trace.h  simple_hierarchy.c  simple_hierarchy.h  state_stack.c  state_stack.h
(+918 files in other folders)
